# prosperity-cli

./: .gitignore  HANDOFF.md  LICENSE  README.md  index.html  pyproject.toml  vercel.json
docs/: api-notes.md
docs/plans/: 2026-04-20-implementation-plan.md  2026-04-20-prosperity-cli-design.md
src/pages/base/: Header.tsx
src/prosperity_cli/: backtest.py  cli.py  config.py  submit.py  timer.py  visualize.py
tests/: test_backtest.py  test_config.py  test_submit.py  test_timer.py  test_visualize.py
