[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prosperity-cli"
version = "0.1.0"
description = "Unified CLI for IMC Prosperity: backtest, visualize, and submit"
readme = "README.md"
authors = [{name = "Raj Kothari"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "requests>=2.31",
    "pycognito>=0.4",
    "imc_p4_bt>=1.0.0",
]

[project.urls]
Repository = "https://github.com/rkothari3/prosperity-cli"

[project.scripts]
prosperity = "prosperity_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/prosperity_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
